src/assets/styles/custom.scss
@import "./theme.scss";

:root {
    --font-family: "Inter", sans-serif;
    --font-size: 16px;

    --show-dark-screenshot: none;
    --show-light-screenshot: none;
}

:root:not([data-theme="dark"]),
[data-theme="light"] {
    --show-light-screenshot: initial;
    --show-dark-screenshot: none;
}

@media only screen and (prefers-color-scheme: dark) {
    :root:not([data-theme="light"]) {
        --show-dark-screenshot: initial;
        --show-light-screenshot: none;
    }
}

body {
    > header,
    > section {
        --block-spacing-vertical: 1rem;
    }

    nav {
        li {
            fieldset {
                position: relative;
                top: 2px;
            }
        }
    }

    header {
        text-align: center;

        .logo {
            width: 128px;
        }
    }

    .logo {
        width: 32px;
        height: auto;
    }

    .screenshot {
        display: none;

        &.dark {
            display: var(--show-dark-screenshot);
        }
        &.light {
            display: var(--show-light-screenshot);
        }
    }

    footer {
        .footnote {
            text-align: right;
        }
    }
}

